--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "devDependencies": {
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
+    "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
     "css-loader": "^0.25.0",
     "dotenv": "^2.0.0",
     "file-loader": "^0.9.0",
@@ -25,8 +27,13 @@
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
+    "form-serialize": "^0.7.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-router": "^3.0.0"
+    "react-router": "^3.0.0",
+    "react-validation": "^2.10.9",
+    "validator": "^6.1.0",
+    "whatwg-fetch": "^2.0.0"
   }
 }
