--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "load-google-maps-api": "0.0.2",
+    "phone": "^1.0.8",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router": "^3.0.0",
